empty index.html files created in subdirectories

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Strefa Latino Skawina - la fusión art</title>
 	<meta name="description" content="zumba fitness, salsa kubańska, bokwa fitness, pierwszy taniec w rytmach latino, występy, pokazy, imprezy firmowe">
-	<link rel="stylesheet" href="css/style.css">
+	<meta name="author" content="Marcin Głowa">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="image/favicon.ico" type="image/x-icon">
 </head>
 <body style="background-color:powderblue;">
